@@ -422,10 +422,10 @@ class PopupSample
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>The title of this menu when it is torn off</summary>
         <param name="value">an object of type <see cref="T:System.String" /></param>
         <returns>an object of type <see cref="T:System.String" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Screen">
@@ -437,10 +437,10 @@ class PopupSample
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>The physical screen this menu is placed on.</summary>
         <param name="value">a <see cref="T:Gdk.Screen" /></param>
         <returns>a <see cref="T:Gdk.Screen" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="SetActive">
