@@ -157,8 +157,8 @@
       <Docs>
         <summary>Creates a new MenuItem containing a label.</summary>
         <param name="label">The label text on the menu item, with an underscore in front of the mnemonic character.</param>
-        <returns>To be added: an object of type 'Gtk.MenuItem'</returns>
-        <remarks>To be added</remarks>
+        <returns>A <see cref="T:Gtk.MenuItem"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Submenu">
