@@ -264,9 +264,15 @@
         <Parameter Name="search_sensitive" Type="System.Boolean" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Select the first visible or selectable child of the menu shell;
+	  don't select tearoff items unless the only item is a tearoff item.
+	</summary>
         <param name="search_sensitive">a <see cref="T:System.Boolean" /></param>
-        <remarks>To be added</remarks>
+        <remarks>If <paramref name="search_sensitive"/> is  true, 
+	  search for the first selectable menu item, otherwise select nothing if
+	  the first item isn't sensitive. This  should be false if the 
+	  menu is being popped up initially.
+	</remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -368,9 +374,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Protected constructor.</summary>
         <returns>a <see cref="T:Gtk.MenuShell" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
   </Members>
