@@ -1,4 +1,12 @@
 2004-08-29 Shane Landrum <epicene@pobox.com>
+
+	* Menu.xml
+	* MenuDetachFunc.xml
+	* MenuItem.xml
+	* MenuPositionFunc.xml
+	* MenuShell.xml: Docs for menu-related classes.	
+
+2004-08-29 Shane Landrum <epicene@pobox.com>
 	
 	* en/Gtk/TextSegCheckFunc.xml
 	* en/Gtk/TextSegCleanupFunc.xml
